# treeroot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  baseline_test.py  datalog.hpp  datalog_tests.cpp  ecs.py  engine.hpp  matcher.cpp  matcher.py  simd.hpp  tests.py
headers/: datalog.hpp  engine.hpp  simd.hpp
src/: datalog_benchmarks.cpp  datalog_tests.cpp
